zip and respond directories